tests/errors/existential/invalid-assign.fil
comp Foo[W]<'G:1>() -> () {
    W := 10;
}